--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -229,7 +229,12 @@
               <span>Gyms</span>
             </a>
           </li>
-          
+          <li>
+            <a routerLink="/admin" (click)="logout()">
+              <i class="fa fa-dumbbell"></i>
+              <span>LOGOUT</span>
+            </a>
+          </li>
 
         </ul>
       </div>
